libs/widgets/KoUnitDoubleSpinBox.cpp
@@ -134,10 +134,21 @@ void KoUnitDoubleSpinBox::privateValueChanged() {
 
 void KoUnitDoubleSpinBox::setUnit( KoUnit unit )
 {
+    if (unit == d->unit) return;
+
     double oldvalue = d->unit.fromUserValue( QDoubleSpinBox::value() );
     QDoubleSpinBox::setMinimum( unit.toUserValue( d->lowerInPoints ) );
     QDoubleSpinBox::setMaximum( unit.toUserValue( d->upperInPoints ) );
-    QDoubleSpinBox::setSingleStep( unit.toUserValue( d->stepInPoints ) );
+
+    qreal step = unit.toUserValue( d->stepInPoints );
+
+    if (unit.type() == KoUnit::Pixel) {
+        // KoUnit rounds the pixel value to 1.0, so we cannot
+        // have step less than 1.0.
+        step = qMax(1.0, step);
+    }
+
+    QDoubleSpinBox::setSingleStep( step );
     d->unit = unit;
     QDoubleSpinBox::setValue( KoUnit::ptToUnit( oldvalue, unit ) );
     setSuffix(unit.symbol().prepend(QLatin1Char(' ')));
